k8s/istio-match/templates/deployment.yaml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: go-demo-7-v0-0-1
  labels:
    app: go-demo-7
    version: v0.0.1
spec:
  replicas: 3
  template:
    metadata:
      labels:
        app: go-demo-7
        version: v0.0.1
    spec:
      containers:
      - name: go-demo-7
        image: vfarcic/go-demo-7:0.0.1
        imagePullPolicy: IfNotPresent
        ports:
        - containerPort: 8080
        livenessProbe:
          httpGet:
            path: /demo/hello?health=true
            port: 8080
          initialDelaySeconds: 60
          periodSeconds: 10
          successThreshold: 1
          timeoutSeconds: 1
        readinessProbe:
          httpGet:
            path: /demo/hello?health=true
            port: 8080
          periodSeconds: 10
          successThreshold: 1
          timeoutSeconds: 1
        resources:
            limits:
              cpu: 100m
              memory: 256Mi
            requests:
              cpu: 80m
              memory: 128Mi
      terminationGracePeriodSeconds: 10

---

apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: go-demo-7-v0-0-2
  labels:
    app: go-demo-7
    version: v0.0.2
spec:
  replicas: 3
  template:
    metadata:
      labels:
        app: go-demo-7
        version: v0.0.2
    spec:
      containers:
      - name: go-demo-7
        image: vfarcic/go-demo-7:0.0.2
        imagePullPolicy: IfNotPresent
        ports:
        - containerPort: 8080
        livenessProbe:
          httpGet:
            path: /demo/hello?health=true
            port: 8080
          initialDelaySeconds: 60
          periodSeconds: 10
          successThreshold: 1
          timeoutSeconds: 1
        readinessProbe:
          httpGet:
            path: /demo/hello?health=true
            port: 8080
          periodSeconds: 10
          successThreshold: 1
          timeoutSeconds: 1
        resources:
            limits:
              cpu: 100m
              memory: 256Mi
            requests:
              cpu: 80m
              memory: 128Mi
      terminationGracePeriodSeconds: 10
