k8s/istio-match/templates/istio.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: go-demo-7
spec:
  hosts:
  - go-demo-7.acme.com
  gateways:
  - go-demo-7
  http:
  - match:
    - queryParams:
        purpose:
          exact: testing
    route:
    - destination:
        host: go-demo-7
        subset: v0-0-2
        port:
          number: 80
  - match:
    - uri:
        prefix: /demo/hello
      ignoreUriCase: true
    route:
    - destination:
        host: go-demo-7
        subset: v0-0-2
        port:
          number: 80
  - route:
    - destination:
        host: go-demo-7
        subset: v0-0-1
        port:
          number: 80

---

apiVersion: networking.istio.io/v1alpha3
kind: DestinationRule
metadata:
  name: go-demo-7
spec:
  host: go-demo-7
  subsets:
  - name: v0-0-1
    labels:
      version: v0.0.1
  - name: v0-0-2
    labels:
      version: v0.0.2

---

apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: go-demo-7
spec:
  selector:
    istio: ingressgateway
  servers:
  - port:
      number: 80
      name: http
      protocol: HTTP
    hosts:
    - go-demo-7.acme.com
